# desktop-business-app

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  app_build.sh  backend_and_app_build.sh  backend_clean_build.sh  clang-fmt-all.sh  create_container.sh  ctest_run.sh  dependencies.sh  run_container.sh  tests_and_backend_clean_build.sh  valgrind.supp  valgrind_ctest_run.sh
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt  DoctorGraphicalInterface.qml  StatusBar.qml  application.cpp  application.hpp  loginScreen.qml  main.cpp  main.qml  mainMenu.qml  mainwindow.cpp
modules/app/bindings/: DoctorGraphicalInterface.cpp  ReceptionistGraphicalInterface.cpp  ReceptionistGraphicalInterface.hpp
modules/app/components/bars/: StatusBar.qml
modules/app/components/buttons/: CustomButton.qml
modules/app/connections/: DoctorGraphicalInterface.cpp  DoctorGraphicalInterface.hpp
modules/app/interfaces/: DoctorGraphicalInterface.qml  ReceptionistGraphicalInterface.qml
modules/app/views/login/: loginScreen.qml
modules/backend/: CMakeLists.txt  installation_rules.cmake
modules/backend/calendar/: CMakeLists.txt  Day.cpp  Day.hpp  TimeSlot.cpp  TimeSlot.hpp  WorkUnit.cpp  WorkUnit.hpp
modules/backend/clinic/: CMakeLists.txt  Clinic.cpp  Clinic.hpp  clinic.hpp
modules/backend/clinic/room/: Room.cpp  Room.hpp  iRoom.hpp
modules/backend/clinic/staff/: Staff.cpp  Staff.hpp  iStaff.hpp  i_staff.hpp  staff.hpp
modules/backend/common/: CMakeLists.txt
modules/backend/common/enumerations/: Allergen.hpp  Sex.hpp  Specialization.hpp  Treatment.hpp  TreatmentState.hpp  allergen.hpp  gender.hpp  specialization.hpp  treatment_state.hpp
modules/backend/common/file_manager/: CMakeLists.txt  FileManager.cpp  Paths.hpp
modules/backend/common/person/: personal_data.hpp
modules/backend/common/personal_data/: PersonalData.cpp  PersonalData.hpp  personal_data.hpp
modules/backend/common/validators/: PeselValidator.cpp  PeselValidator.hpp  pesel_validator.hpp
modules/backend/login/: User.hpp  UserStrategy.hpp
modules/backend/patients/: CMakeLists.txt  PatientCollection.cpp  PatientCollection.hpp  PatientsFactory.cpp  PatientsFactory.hpp  patient_collection.hpp
modules/backend/patients/patient/: Patient.cpp  Patient.hpp  iPatient.hpp  patient.hpp
modules/backend/proto/: CMakeLists.txt  PersonalData.proto  README.md  Staff.proto  allergen.proto  doctor.proto  personal_data.proto  receptionist.proto  specialization.proto  staff.proto  treatment.proto  treatment_state.proto
modules/backend/proto/enumerations/: Allergen.proto  Sex.proto  Specialization.proto  Treatment.proto  TreatmentState.proto  allergen.proto  sex.proto  treatment.proto  treatment_state.proto
modules/backend/serializer/: CMakeLists.txt  Serializer.cpp  Serializer.hpp  SerializerHelper.cpp  SerializerHelper.hpp  serializer.hpp
modules/backend/tests/: CMakeLists.txt  install_gtest.cmake
modules/backend/tests/integration/: CMakeLists.txt
modules/backend/tests/mocks/: CMakeLists.txt
modules/backend/tests/unit/: CMakeLists.txt
modules/backend/visits/: CMakeLists.txt  VisitCollection.cpp  VisitCollection.hpp  visit_collection.hpp
modules/backend/visits/visit/: Visit.cpp  Visit.hpp  iVisit.hpp  visit.hpp
modules/backend/warehouse/: CMakeLists.txt  Warehouse.cpp  Warehouse.hpp
modules/clinic/: clinic.hpp
modules/clinic/staff/doctor/: doctor.hpp  i_doctor.hpp  i_visit_doctor.hpp
modules/clinic/staff/room/: i_room.hpp
modules/common/enumerations/: allergen.hpp  gender.hpp  specialization.hpp  treatment.hpp  treatment_state.hpp
modules/common/person/: person.hpp
modules/common/person/address/: address.hpp
modules/common/person/name/: name.hpp
modules/patient/: patient.h
modules/patients/: patient_collection.hpp  patients_factory.hpp
modules/patients/patient/: i_patient.hpp  i_serde_patient.hpp  i_visit_patient.hpp  patient.hpp
modules/tests/: CMakeLists.txt
modules/tests/integration_tests/: CMakeLists.txt
modules/tests/mocks/: CMakeLists.txt
modules/tests/unit_tests/: CMakeLists.txt
modules/visits/visit/: i_visit.hpp
modules/warehouse/: warehouse.h
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/app/account/: CMakeLists.txt  account.cpp  account.hpp
src/app/calendar/: CMakeLists.txt  calendar.cpp  calendar.hpp  connector.cpp  connector.hpp  day.cpp  day.hpp  day_name.cpp  day_name.hpp  month.cpp  month.hpp  year.cpp  year.hpp
src/app/clinic/: CMakeLists.txt  clinic_facade.cpp  clinic_facade.hpp
src/app/data_file_manager/: CMakeLists.txt  data_file_manager.cpp  data_file_manager.hpp
src/app/doctor/: CMakeLists.txt  doctor.cpp  doctor.hpp
src/app/encrypt/: CMakeLists.txt  encrypt.cpp  encrypt.hpp
src/app/equipment/: CMakeLists.txt  equipment.cpp  equipment.hpp
src/app/file_manager/: CMakeLists.txt  file_manager.cpp  file_manager.hpp  paths.hpp
src/app/login/: CMakeLists.txt  login.cpp  login.hpp
src/app/medicine/: CMakeLists.txt  medicine.cpp  medicine.hpp
src/app/objectPlus/: CMakeLists.txt  objectPlus.cpp  objectPlus.hpp
src/app/patient/: CMakeLists.txt  allergen.cpp  allergen.hpp  patient.cpp  patient.hpp
src/app/person/: CMakeLists.txt  gender.cpp  gender.hpp  person.cpp  person.hpp
src/app/product/: CMakeLists.txt  product.cpp  product.hpp
src/app/proto/: CMakeLists.txt  clinic.pb.cc  clinic.pb.h  clinic.proto
src/app/receptionist/: CMakeLists.txt  receptionist.cpp  receptionist.hpp  shift.cpp  shift.hpp
src/app/reserve_queue/: CMakeLists.txt  reserve_queue.cpp  reserve_queue.hpp
src/app/room/: CMakeLists.txt  room.cpp  room.hpp
src/app/visit/: CMakeLists.txt  status.cpp  status.hpp  treatment.cpp  treatment.hpp  visit.cpp  visit.hpp  visitStatus.cpp  visitStatus.hpp
src/app/warehouse/: CMakeLists.txt  material.hpp  warehouse.cpp  warehouse.hpp
src/app/warehouse/test/: CMakeLists.txt  (+2 more)
src/tests/: CMakeLists.txt  unit-tests.cpp
src/tests/integration/: integration_tests.cpp  integration_tests.hpp
src/tests/test_utils/: CMakeLists.txt  test_utils.cpp  test_utils.hpp
(+178 files in other folders)
